test: video86 - atualiza testes para producer